# P2PChatBot

./: Cargo.toml  README.md  log4rs.yaml
doc/: RustExperience.txt
examples/clap_demo/: cli.rs  commands.rs  main.rs
examples/crossterm_demo/: commands.rs  terminal.rs
examples/multicast_receive/: main.rs
examples/multicast_send/: main.rs
examples/terminal_demo/: commands.rs  main.rs  terminal.rs
examples/tui_demo/: main.rs
examples/udp_receiver/: main.rs
examples/udp_sender/: main.rs
src/: cli.rs  commands.rs  common.rs  communication.rs  main.rs  multicast_discovery.rs  node_manager.rs  terminal.rs  udp_connection.rs
