[package]
name = "P2PChatBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = "1.0"
uuid = { version = "1.0", features = ["v4"] } 
clap = { version = "3.1.18", features = ["derive"] }
shell-words = "1.1.0"
crossterm = "0.26"
rustyline = "9.1.0"

[[example]]
name = "clap_demo"
path = "examples/clap_demo/main.rs"

[[example]]
name = "multicast_send"
path = "examples/multicast_send/main.rs"

[[example]]
name = "multicast_receive"
path = "examples/multicast_receive/main.rs"

[[example]]
name = "terminal_demo"
path = "examples/terminal_demo/main.rs"

